Refactoring...