@@ -27,12 +27,11 @@ import java.util.List;
 import java.util.regex.MatchResult;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 
 public class Semver implements Comparable<Semver> {
-    public static final Pattern EA_PATTERN           = Pattern.compile("(ea|EA)((\\.|\\+|\\-)([0-9]+))?");
-    public static final Pattern BUILD_NUMBER_PATTERN = Pattern.compile("\\+?(b|B)([0-9]+)");
+    public static final Pattern EA_PATTERN           = Pattern.compile("(ea|EA)(([.+\\-])([0-9]+))?");
+    public static final Pattern BUILD_NUMBER_PATTERN = Pattern.compile("\\+?([bB])([0-9]+)");
 
     private VersionNumber versionNumber;
     private ReleaseStatus releaseStatus;
@@ -66,13 +65,11 @@ public class Semver implements Comparable<Semver> {
             this.preBuild = Integer.toString(versionNumber.getBuild().getAsInt());
         }
 
-        if (this.preBuild.isEmpty() && !metadata.isEmpty()) {
-            if (Helper.isPositiveInteger(this.metadata)) {
-                this.preBuild = this.metadata;
-                Integer build = Integer.valueOf(this.preBuild);
-                if (build > 0) {
-                    this.versionNumber.setBuild(build);
-                }
+        if (this.preBuild.isEmpty() && !metadata.isEmpty() && Helper.isPositiveInteger(this.metadata)) {
+            this.preBuild = this.metadata;
+            Integer build = Integer.valueOf(this.preBuild);
+            if (build > 0) {
+                this.versionNumber.setBuild(build);
             }
         }
 
@@ -83,19 +80,17 @@ public class Semver implements Comparable<Semver> {
         // Extract early access preBuild
         if (null != this.pre) {
             final Matcher           eaMatcher = EA_PATTERN.matcher(this.pre);
-            final List<MatchResult> eaResults = eaMatcher.results().collect(Collectors.toList());
+            final List<MatchResult> eaResults = eaMatcher.results().toList();
             if (eaResults.size() > 0) {
                 final MatchResult eaResult = eaResults.get(0);
                 if (null != eaResult.group(1)) {
                     this.versionNumber.setReleaseStatus(ReleaseStatus.EA);
                     if (null != eaResult.group(4)) {
                         this.preBuild = !eaResult.group(4).equals("0") ? eaResult.group(4) : "";
-                        if (null == this.versionNumber.getBuild() || this.versionNumber.getBuild().isEmpty()) {
-                            if (!this.preBuild.isEmpty()) {
-                                Integer build = Integer.parseInt(this.preBuild);
-                                if (build > 0) {
-                                    this.versionNumber.setBuild(build);
-                                }
+                        if ((null == this.versionNumber.getBuild() || this.versionNumber.getBuild().isEmpty()) && !this.preBuild.isEmpty()) {
+                            Integer build = Integer.parseInt(this.preBuild);
+                            if (build > 0) {
+                                this.versionNumber.setBuild(build);
                             }
                         }
                     }
@@ -118,18 +113,14 @@ public class Semver implements Comparable<Semver> {
         // Extract metadata e.g. build number
         if (null != this.metadata) {
             final Matcher           buildNumberMatcher = BUILD_NUMBER_PATTERN.matcher(this.metadata);
-            final List<MatchResult> buildNumberResults = buildNumberMatcher.results().collect(Collectors.toList());
+            final List<MatchResult> buildNumberResults = buildNumberMatcher.results().toList();
             if (buildNumberResults.size() > 0) {
                 final MatchResult buildNumberResult = buildNumberResults.get(0);
-                if (null != buildNumberResult.group(1)) {
-                    if (null != buildNumberResult.group(2)) {
-                        if (null == this.versionNumber.getBuild() || this.versionNumber.getBuild().isEmpty()) {
-                            Integer build = Integer.parseInt(buildNumberResult.group(2));
-                            if (build > 0) {
-                                this.versionNumber.setBuild(build);
-                                this.preBuild = Integer.toString(build);
-                            }
-                        }
+                if (null != buildNumberResult.group(1) && null != buildNumberResult.group(2) && (null == this.versionNumber.getBuild() || this.versionNumber.getBuild().isEmpty())) {
+                    Integer build = Integer.parseInt(buildNumberResult.group(2));
+                    if (build > 0) {
+                        this.versionNumber.setBuild(build);
+                        this.preBuild = Integer.toString(build);
                     }
                 }
             }
@@ -163,14 +154,14 @@ public class Semver implements Comparable<Semver> {
 
     public String getPre() { return pre; }
     public void setPre(final String pre) {
-        if (null == pre && pre.length() > 0) {
+        if (null != pre && pre.length() > 0) {
             Error err = validatePrerelease(pre);
             if (null != err) {
                 throw new IllegalArgumentException(err.getMessage());
             }
         }
         this.pre           = null == pre ? "" : pre;
-        this.releaseStatus = (null == pre || pre.isEmpty()) ? ReleaseStatus.GA : ReleaseStatus.EA;
+        this.releaseStatus = (null == this.pre || this.pre.isEmpty()) ? ReleaseStatus.GA : ReleaseStatus.EA;
     }
 
     public String getPreBuild() { return preBuild; }
@@ -192,7 +183,7 @@ public class Semver implements Comparable<Semver> {
 
     public String getMetadata() { return metadata; }
     public void setMetadata(final String metadata) {
-        if (null == metadata && metadata.length() > 0) {
+        if (null != metadata && metadata.length() > 0) {
             Error err = validateMetadata(metadata);
             if (null != err) {
                 throw new IllegalArgumentException(err.getMessage());
@@ -339,13 +330,7 @@ public class Semver implements Comparable<Semver> {
             int thisBuild  = getPreBuildAsInt();
             int otherBuild = semVer.getPreBuildAsInt();
 
-            if (thisBuild > otherBuild) {
-                d = 1;
-            } else if (thisBuild < otherBuild) {
-                d = -1;
-            } else {
-                d = 0;
-            }
+            d = Integer.compare(thisBuild, otherBuild);
         } else {
             d = 0;
         }
